# callguard

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  README.md  REVIEW.md  mkdocs.yml  pyproject.toml
docs/: adapters.md  architecture.md  cli.md  compliance.md  findings.md  index.md  quickstart.md  schema-spec.md
docs/adapters/: claude-sdk.md  crewai.md  langchain.md  openai-agents.md  others.md  overview.md
docs/audit/: sinks.md  telemetry.md
docs/contracts/: operators.md  templates.md  yaml-reference.md
docs/guides/: adapter-comparison.md  adversarial.md  postcondition-design.md
examples/: README.md  contract_cookbook.py  contracts.py  demo_agno.py  demo_claude_agent_sdk.py  demo_crewai.py  demo_langchain.py  demo_openai_agents.py  demo_semantic_kernel.py  otel_config.py  setup.sh  tools.py
src/callguard/: __init__.py  audit.py  budget.py  contracts.py  envelope.py  gates.py  hooks.py  pipeline.py  session.py  storage.py  telemetry.py  types.py
src/edictum/: __init__.py  audit.py  builtins.py  contracts.py  envelope.py  otel.py  pipeline.py  session.py  storage.py  telemetry.py  types.py
tests/: conftest.py  test_adapter_agno.py  test_adapter_claude.py  test_adapter_crewai.py  test_adapter_langchain.py  test_adapter_openai_agents.py  test_adapter_semantic_kernel.py  test_audit.py  test_builtins.py  test_contract_cookbook.py  test_contracts.py  test_envelope.py  test_hooks.py  test_limits.py  test_otel.py  test_pipeline.py  test_principal.py  test_review_fixes.py  test_session.py  test_storage.py  test_telemetry.py
tests/test_cli/: test_cli.py
(+60 files in other folders)
